Исправление ошибок в логике